--- a/.env
+++ b/.env
@@ -39,5 +39,5 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/progica?serverVersion=5.7&charset=utf8
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://0d5203a4e8d935:6d6761b4c760d2@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
